--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,40 @@ button {
     margin-top: 15px;
 }
 
+/* Styles for the current day info section */
 .current-day {
     border: 1px solid black;
     padding: 15px;
+}
+
+.uv-index {
+    padding: 5px;
+    border-radius: 5px;
+    background-color: grey;
+}
+
+.uvi-low {
+    background-color: green;
+    color: white;
+}
+
+.uvi-med-low {
+    background-color: yellow;
+}
+
+.uvi-med-high {
+    background-color: orange;
+    color: white;
+}
+
+.uvi-high {
+    background-color: red;
+    color: white;
+}
+
+.uvi-scorcher {
+    background-color:rgb(59, 7, 162);
+    color: white;
 }
 
 /* Add padding around the flex columns */
@@ -28,7 +59,7 @@ button {
 }
 
 .five-day-forecast-card {
-    background-color: navy;
+    background-color: rgb(1, 1, 35);
     color: white;
     padding: 10px;
 }
